commit before installing bootstrap gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<h3><a class="navbar-brand" href="/">Farms and Markets</a></h3>
 <%= yield %>
 
 </body>
